added and styled short persian stories

--- a/src/components/BrandBadge.astro
+++ b/src/components/BrandBadge.astro
@@ -10,8 +10,8 @@ import LangToggle from "./LangToggle.astro";
   >
     <!-- Background -->
     <div
-      class="absolute inset-0 rounded-full backdrop-blur-xl shadow-lg
-             hover:bg-white/30 dark:hover:bg-black/30
+      class="absolute inset-0 rounded-full 
+            
              transition-color-scale duration-300 ease-out z-10"
     ></div>
 
