--- a/src/pages/fa/partners.astro
+++ b/src/pages/fa/partners.astro
@@ -1,6 +1,8 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 const pageTitle = "Home Page";
 ---
-<BaseLayout>
+<BaseLayout lang="fa">
+
+    
 </BaseLayout>
