--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -30,6 +30,11 @@ const projects = [
       "My ongoing documenting of altered states of consciousness, phenomenology, and psychedelic cognition.",
     link: "/wiki"
   },
+      {
+    title: "LightMeNow",
+    description: "web based RGB screen lighting.",
+    github: "/https://github.com/wr3yth",
+  },
 ];
 ---
 
