--- a/src/pages/fa/poems/index.astro
+++ b/src/pages/fa/poems/index.astro
@@ -1,5 +1,5 @@
 ---
-import BaseLayout from "../../layouts/BaseLayout.astro";
+import BaseLayout from "../../../layouts/BaseLayout.astro";
 import { getCollection } from "astro:content";
 
 // load poems
@@ -13,7 +13,7 @@ const excerpt = (body?: string) => {
 };
 ---
 
-<BaseLayout>
+<BaseLayout lang="fa">
 
   <main class="px-6 py-24 max-w-4xl mx-auto text-neutral-800 dark:text-neutral-100 leading-relaxed">
 
